fix(SegmentedControl.Item): remove side paddings & do not truncate text

--- a/packages/bezier-react/src/components/SegmentedControl/SegmentedControl.module.scss
+++ b/packages/bezier-react/src/components/SegmentedControl/SegmentedControl.module.scss
@@ -129,7 +129,6 @@
   justify-content: center;
 
   min-width: 0;
-  padding: 0 8px;
 
   outline: none;
 
